--- a/src/app/shared/threads/threads.scss
+++ b/src/app/shared/threads/threads.scss
@@ -6,13 +6,18 @@ app-threads-header {
   z-index: 1;
 }
 
+:host {
+  display: block;
+  height: 100%;
+  max-height: 100%;
+  min-height: 0;
+}
+
 aside {
   width: 100%;
   height: 100%;
-  max-height: 900px;
+  max-height: 100%;
   border-radius: 30px;
-  top: 157px;
-  left: 1415px;
   display: grid;
   grid-template-rows: auto 1fr;
   min-height: 0;
@@ -22,9 +27,6 @@ aside {
 // ========================================
 // RESPONSIVE STYLES - Mobile Fullscreen Overlay
 // ========================================
-:host {
-  display: block;
-}
 
 :host.mobile {
   position: fixed;
